# recipe-extractor

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  Makefile  README.md  compose.yaml  index.yaml  main.py  parser_recipe.py  privacy-policy.md  pyproject.toml  requirements.txt  terms-of-service.md  test.json  test_main.py
.github/workflows/: build-push-docker-images.yaml  build-push-helm-chart.yaml  build-test.yaml  check-version-bump.yaml  clean-feature-deployment.yaml  publish-image.yaml  publish-image.yaml.yml  publish.yaml
apps/extraction-service/: Dockerfile  pyproject.toml
apps/extraction-service/src/: .env.template  main.py  main_test.py
apps/recipe-service/: RecipeService.sln
apps/recipe-service/RecipeService.Api/: Program.cs  RecipeService.Api.csproj  RecipeService.http  appsettings.json
apps/recipe-service/RecipeService.Core/: RecipeService.Core.csproj
apps/recipe-service/RecipeService.Infrastructure/: ApplicationDbContext.cs  RecipeService.Infrastructure.csproj
datamodel/: entities.py
deploy/: 00-recipe-parser-database.yaml  01-recipe-parser-deployment.yaml  02-recipe-parser-service.yaml  03-recipe-parser-ingress.yaml
deploy/recipe-extractor/: Chart.yaml  DEPLOYMENT-CHECKLIST.md  README.md  values-feature.yaml  values.yaml
deploy/recipe-extractor/templates/: NOTES.txt  _helpers.tpl  database.yaml  deployment.yaml  extraction-deployment.yaml  extraction-service.yaml  ingress.yaml  recipe-deployment.yaml  recipe-service.yaml  service.yaml
infrastructure/: notion_client.py
parser/: ingredients.py  main.py  parse_website.py  steps.py
postman/collections/: 29107717-5dc3625a-8455-41ee-ae6e-89581fb214b8.json
scripts/: bump-recipe-extractor-version.sh  bump_application_version.sh  deploy-feature.sh  teardown-feature.sh
src/: main.py  main_test.py  test_main.py
src/datamodel/: entities.py  recipe_dtos.py
src/infrastructure/: notion_client.py
src/parser/: parse_website.py  steps.py
src/utils/: auth_utils.py
(+32 files in other folders)
