[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "recipe-extractor"
dynamic = ["dependencies"]
version = "0.1.0"
description = "A tool to extract ingredients and instructions from recipe URLs and store them in Notion and a database."
requires-python = ">= 3.11"
authors = [
    { name = "Júlia Ilášová" }
]
maintainers = [
    { name = "Júlia Ilášová" }
]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.pytest.ini_options]
env = [
    "NOTION_API_KEY=api-key",
    "NOTION_DATABASE_ID=notion-database-id",
    "NOTION_VERSION=2022-06-28",
    "DATABASE_CONNECTION_STRING=database-connection-string"
]